--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             
             <div class="policy-section">
                 <h3>Refund Policy</h3>
-                <p>At Clarity Copyright, we are committed to your satisfaction:</p>
+                <p>At Antigone Litterae, we are committed to your satisfaction:</p>
                 <ul>
                     <li>Initial consultations are free of charge and carry no obligation.</li>
                     <li>For contracted services, we offer a 100% satisfaction guarantee on deliverables.</li>
