--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Antigone Litterae Book Copyright Services</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/EB-Garamond/6.0.0/EB-Garamond.css">
     <style>
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            font-family: 'EB Garamond', Georgia, serif;
             line-height: 1.6;
             color: #333;
             max-width: 1200px;
@@ -24,8 +25,8 @@
             align-items: center;
         }
         .logo {
-            font-size: 24px;
-            font-weight: 700;
+            font-size: 28px;
+            font-weight: 600;
             color: #2d3748;
             text-decoration: none;
         }
@@ -37,6 +38,7 @@
             text-decoration: none;
             color: #4a5568;
             font-weight: 500;
+            font-size: 18px;
         }
         .nav-links a:hover {
             color: #2b6cb0;
@@ -46,12 +48,13 @@
             text-align: center;
         }
         h1 {
-            font-size: 2.5rem;
+            font-size: 3rem;
             margin-bottom: 16px;
             color: #1a202c;
+            font-weight: 500;
         }
         .subtitle {
-            font-size: 1.25rem;
+            font-size: 1.5rem;
             color: #4a5568;
             margin-bottom: 32px;
         }
@@ -68,8 +71,8 @@
             box-shadow: 0 2px 4px rgba(0,0,0,0.05);
         }
         .service-title {
-            font-size: 1.25rem;
-            font-weight: 600;
+            font-size: 1.5rem;
+            font-weight: 500;
             margin-bottom: 12px;
             color: #2d3748;
         }
@@ -77,11 +80,12 @@
             display: inline-block;
             background-color: #4299e1;
             color: white;
-            font-weight: 600;
+            font-weight: 500;
             padding: 12px 24px;
             border-radius: 6px;
             text-decoration: none;
             margin-top: 16px;
+            font-size: 18px;
         }
         .cta-button:hover {
             background-color: #3182ce;
@@ -93,17 +97,23 @@
             margin-bottom: 40px;
         }
         h2 {
-            font-size: 1.875rem;
+            font-size: 2.25rem;
             margin-bottom: 20px;
             color: #2d3748;
+            font-weight: 500;
         }
         h3 {
-            font-size: 1.5rem;
+            font-size: 1.75rem;
             margin-bottom: 16px;
             color: #2d3748;
+            font-weight: 500;
+        }
+        p {
+            font-size: 18px;
         }
         ul {
             margin-left: 20px;
+            font-size: 18px;
         }
         footer {
             border-top: 1px solid #eaeaea;
@@ -121,7 +131,8 @@
             min-width: 250px;
         }
         .footer-title {
-            font-weight: 600;
+            font-weight: 500;
+            font-size: 1.25rem;
             margin-bottom: 16px;
             color: #2d3748;
         }
